--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wildberries/eslint-config-root",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "description": "",
   "devDependencies": {
     "@commitlint/cli": "9.1.2",
@@ -9,8 +9,8 @@
     "husky": "3.0.9"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "2.34.0",
-    "@typescript-eslint/parser": "2.5.0",
+    "@typescript-eslint/eslint-plugin": "2.7.0",
+    "@typescript-eslint/parser": "2.7.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "6.11.0",
@@ -24,7 +24,11 @@
     "eslint-plugin-react": "7.16.0",
     "eslint-plugin-react-hooks": "2.2.0",
     "eslint-plugin-security": "1.4.0",
-    "prettier": "1.19.1"
+    "prettier": "1.19.1",
+    "eslint-plugin-testcafe": "0.2.1",
+    "eslint-plugin-unused-imports": "0.1.3",
+    "eslint-config-react-app": "5.2.1",
+    "eslint-plugin-flowtype": "5.2.0"
   },
   "scripts": {
     "commit": "git add . && git commit --no-edit",
