--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wildberries/eslint-config",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0-alpha.1",
   "description": "",
   "devDependencies": {
     "@commitlint/cli": "9.1.2",
@@ -27,7 +27,8 @@
     "eslint-plugin-security": "1.4.0",
     "eslint-plugin-testcafe": "0.2.1",
     "eslint-plugin-unused-imports": "1.1.5",
-    "eslint-config-react-app": "6.0.0"
+    "eslint-config-react-app": "6.0.0",
+    "eslint-plugin-flowtype": "8.0.3"
   },
   "scripts": {
     "commit": "git add . && git commit --no-edit",
