--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wildberries/eslint-config",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-alpha.2",
   "description": "",
   "devDependencies": {
     "@commitlint/cli": "9.1.2",
@@ -12,23 +12,23 @@
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "8.2.0",
-    "prettier": "2.4.1",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
+    "eslint-config-react-app": "6.0.0",
     "eslint-import-resolver-alias": "1.1.2",
     "eslint-import-resolver-typescript": "2.5.0",
     "eslint-loader": "4.0.2",
     "eslint-plugin-css-modules": "2.11.0",
+    "eslint-plugin-flowtype": "8.0.3",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-react-hooks": "^4.2.1-alpha-ee069065d-20211105",
     "eslint-plugin-security": "1.4.0",
     "eslint-plugin-testcafe": "0.2.1",
     "eslint-plugin-unused-imports": "1.1.5",
-    "eslint-config-react-app": "6.0.0",
-    "eslint-plugin-flowtype": "8.0.3"
+    "prettier": "2.4.1"
   },
   "scripts": {
     "commit": "git add . && git commit --no-edit",
