--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wildberries/eslint-config",
-  "version": "2.0.1-beta.3",
+  "version": "2.0.1",
   "description": "",
   "devDependencies": {
     "@commitlint/cli": "9.1.2",
