--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wildberries/eslint-config",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "",
   "devDependencies": {
     "@commitlint/cli": "9.1.2",
@@ -24,7 +24,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.1-alpha-ee069065d-20211105",
+    "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-security": "1.4.0",
     "eslint-plugin-testcafe": "0.2.1",
     "eslint-plugin-unused-imports": "1.1.5",
