--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wildberries/eslint-config",
-  "version": "2.1.10-beta.3",
+  "version": "2.1.10",
   "main": "index.js",
   "description": "Wildberries seller service config",
   "dependencies": {
