--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@wildberries/eslint-config",
+  "name": "@mihanizm56/eslint-config",
   "version": "2.1.12",
   "main": "index.js",
-  "description": "Wildberries seller service config",
+  "description": "eslint config",
   "dependencies": {
     "eslint": "8.21.0",
     "eslint-config-airbnb": "19.0.4",
@@ -13,7 +13,6 @@
     "eslint-plugin-css-modules": "2.11.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-security": "1.5.0",
-    "eslint-plugin-testcafe": "0.2.1",
     "eslint-plugin-unused-imports": "2.0.0",
     "eslint-plugin-unicorn": "43.0.2",
     "prettier": "2.7.1"
